# ai-trading

./: Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  test_complete_system.py  test_integration.py  test_risk_reports.py  test_system_integration.py  接口对接和配置详解.md  详细部署手册.md
agents/: __init__.py  account_manager.py  strategy_manager.py
ai_engine/: __init__.py  backtesting.py  deep_learning_models.py  feature_engineering.py  model_evaluator.py  model_trainer.py  rl_environment.py
app/: __init__.py  main.py
config/: __init__.py  api_config.py  baota_deploy_config.json  bt_panel_config.json  deployment_checklist.yaml  deployment_config.yaml  deployment_env.py  exchanges.py  risk_config.py  trading_config.py
core/: __init__.py  celery_app.py  config.py  database.py  logger.py  security.py  strategy_naming.py
data/: __init__.py  base_collector.py  binance_api.py  data_formatter.py  data_manager.py  error_handler.py  exchange_client.py  okx_api.py  rest_collector.py  websocket_collector.py
deploy/: alertmanager.yml  alerts.yml  nginx.conf  prometheus.yml
docs/: BAOTA_PANEL_INSTALLATION_GUIDE.md  DEPLOYMENT_COMPLETE_GUIDE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  GITHUB_TO_BAOTA_DEPLOYMENT_GUIDE.md  TENCENT_CLOUD_BT_PANEL_COMPLETE_GUIDE.md  TENCENT_CLOUD_BT_PANEL_DEPLOYMENT.md  exchange_api_integration.md  宝塔面板一键部署指南.md  宝塔面板部署清单.md
execution/: __init__.py  trading_engine.py
frontend/: index.html  package.json  vite.config.ts
monitoring/: __init__.py  prometheus_client.py  system_monitor.py  (+1 more)
(+103 files in other folders)
